...
                    borderRadius: BorderRadius.circular(4),
                  ),
                ),
              ),
              const SizedBox(height: 16),
              Text(
                'Nearby Parking',
                style: AppTextStyles.headline.copyWith(fontSize: 26),
              ),
              const SizedBox(height: 16),
              AppSearchBar(
                onChanged: (value) =>
                    ref.read(searchQueryProvider.notifier).state = value,
...
